add thymeleaf and icon to the project

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Hello</title>
+    <title>Login</title>
+    <link rel="shortcut icon" href="/images/pz.ico">
 </head>
 <body>
 <h1>Tu będzie strona logowania do pracy dyplomowej</h1>
