create a logout process

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,6 +6,11 @@
     <link rel="shortcut icon" href="/images/pz.ico">
 </head>
 <body>
-<h1>Tu będzie strona logowania do pracy dyplomowej</h1>
+<h1>Index</h1>
+
+<form th:action="@{/logout}" method="post" class="form-inline">
+    <input type="submit" th:value="#{login.logout}" class="btn btn-secondary"/>
+</form>
+
 </body>
 </html>
