improve layout page for no auth users

--- a/src/main/resources/templates/layouts/no_auth_layout.html
+++ b/src/main/resources/templates/layouts/no_auth_layout.html
@@ -5,23 +5,24 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Layout</title>
+    <title th:text="#{index.label}"/>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/cover/">
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="../../static/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}">
     <!-- Custom styles for this template -->
     <link rel="stylesheet" href="../../static/css/cover.css" th:href="@{/css/cover.css}">
+    <link rel="stylesheet" href="../../static/css/no_auth_layout.css" th:href="@{/css/no_auth_layout.css}">
     <link rel="shortcut icon" href="/images/pz.ico">
 </head>
 <body class="d-flex h-100 text-center text-white bg-dark">
 <div class="container d-flex w-100 h-100 p-3 mx-auto flex-column">
     <header class="mb-auto">
         <div>
-            <h3 class="float-md-start mb-0"><a href="layout.html" th:href="@{/layout}" class="text-white no-line un-line">Bugtracker</a></h3>
+            <h3 class="float-md-start mb-0"><a href="layouts/no_auth_layout.html" th:href="@{/}" class="text-white no-line un-line">Bugtracker</a></h3>
             <nav class="nav nav-masthead justify-content-center float-md-end">
-                <a class="nav-link active" aria-current="page" href="security/login.html" th:text="#{login.label}">Sign in</a>
-                <a class="nav-link" href="security/signup.html" th:text="#{login.signUp}">Sign up</a>
+                <a class="nav-link active" aria-current="page" href="security/login.html" th:href="@{/index}" th:text="#{login.label}">Sign in</a>
+                <a class="nav-link" href="security/signup.html" th:href="@{/signup}" th:text="#{login.signUp}">Sign up</a>
             </nav>
         </div>
     </header>
@@ -30,7 +31,7 @@
         <h1 th:text="#{layout.main.title}">WSB</h1>
         <p class="lead" th:text="#{layout.main.content}">content</p>
         <p class="lead">
-            <a href="" th:href="@{/about}" class="btn btn-lg btn-secondary fw-bold border-white bg-white un-line" th:text="#{layout.main.button}">Learn more</a>
+            <a href="about" th:href="@{/about}" class="btn btn-lg btn-secondary fw-bold border-white bg-white un-line" th:text="#{layout.main.button}">Learn more</a>
         </p>
     </main>
 
