--- a/src/main/resources/templates/layouts/footer.html
+++ b/src/main/resources/templates/layouts/footer.html
@@ -5,6 +5,7 @@
 <footer class="mt-auto text-white-50" th:fragment="footer">
   <p th:text="#{footer.content}"></p>
   <p><a href="https://github.com/pzdev2/bug-tracker" class="text-white">GitHub</a> projektu</p>
+  <p>Cover template for <a href="https://getbootstrap.com/" class="text-white">Bootstrap</a>, by <a href="https://twitter.com/mdo" class="text-white">@mdo</a>.</p>
 </footer>
 
 </body>
