--- a/src/main/resources/templates/security/login.html
+++ b/src/main/resources/templates/security/login.html
@@ -1,32 +1,34 @@
 <!DOCTYPE html>
-<html lang="pl" xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{/layouts/no_auth_layout}">
 <head>
-    <meta charset="UTF-8">
-  <title th:text="#{login.label}"/>
-  <link rel="shortcut icon" href="/images/pz.ico">
+    <title th:text="#{login.label}"/>
+    <link rel="stylesheet" href="../../static/css/login.css" th:href="@{/css/login.css}">
 </head>
 <body>
-<div class="container">
-  <div th:if="${param.error}" class="alert alert-danger">
-    <span th:text="#{login.error}"></span>
-  </div>
-  <div th:if="${param.logout}" class="alert alert-danger">
-    <span th:text="#{login.loggedOut}"></span>
-  </div>
-  <form th:action="@{/login}" method="post" class="login-form">
-    <h1 th:text="#{login.label}"/>
-    <div class="form-group">
-      <label for="username"></label>
-      <input id="username" type="text" name="username" class="form-control"/>
+<div layout:fragment="main-content">
+    <div th:if="${param.error}" class="alert alert-danger">
+        <span th:text="#{login.error}"></span>
     </div>
-    <div class="form-group">
-      <label for="password"></label>
-      <input id="password" type="password" name="password" class="form-control"/>
+    <div th:if="${param.logout}" class="alert alert-danger">
+        <span th:text="#{login.loggedOut}"></span>
     </div>
-    <div class="mt-3">
-      <button type="submit" class="btn btn-primary" th:text="#{login.label}"></button>
-    </div>
-  </form>
+    <form th:action="@{/login}" method="post" class="login-form">
+        <h1 th:text="#{login.label}"/>
+        <br>
+        <div class="form-group">
+            <label for="username" th:text="#{login.user}">user</label>
+            <input id="username" type="text" name="username" class="form-control"/>
+        </div>
+        <div class="form-group">
+            <label for="password" th:text="#{login.password}">pass</label>
+            <input id="password" type="password" name="password" class="form-control"/>
+        </div>
+        <div class="mt-3">
+            <button type="submit" class="btn btn-lg btn-secondary fw-bold border-white bg-white un-line" th:text="#{login.confirm}">Confirm</button>
+        </div>
+    </form>
 </div>
 </body>
 </html>
