add link in i18n file

--- a/src/main/resources/templates/layouts/footer.html
+++ b/src/main/resources/templates/layouts/footer.html
@@ -4,7 +4,8 @@
 
 <footer class="mt-auto text-white-50" th:fragment="footer">
   <p th:text="#{footer.content}"></p>
-  <p>Cover template for <a href="https://getbootstrap.com/" class="text-white">Bootstrap</a>, by <a href="https://twitter.com/mdo" class="text-white">@mdo</a>.</p>
+  <p th:utext="#{footer.github}"></p>
+  <p>Cover template for <a href="https://getbootstrap.com/">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p>
 </footer>
 
 </body>
