--- a/src/main/resources/templates/layouts/footer.html
+++ b/src/main/resources/templates/layouts/footer.html
@@ -3,7 +3,7 @@
 <body>
 
 <footer class="mt-auto text-white-50" th:fragment="footer">
-  <p th:text="#{footer.content}"></p>
+  <p th:utext="#{footer.content}"></p>
   <p th:utext="#{footer.github}"></p>
   <p>Cover template for <a href="https://getbootstrap.com/">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p>
 </footer>
