--- a/src/main/resources/templates/security/login.html
+++ b/src/main/resources/templates/security/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pl" xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="~{/layouts/no_auth_layout}">
+      layout:decorate="~{layouts/no_auth_layout}">
 <head>
     <link rel="stylesheet" href="../../static/css/login.css" th:href="@{/css/login.css}">
 </head>
