--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="~{/layouts/no_auth_layout}">
+      layout:decorate="~{layouts/no_auth_layout}">
 <body>
 <div layout:fragment="main-content">
     <p th:text="#{about.content}">
