--- a/src/main/resources/templates/security/login.html
+++ b/src/main/resources/templates/security/login.html
@@ -25,7 +25,7 @@
             <input id="password" type="password" name="password" class="form-control"/>
         </div>
         <div class="mt-3">
-            <button type="submit" class="btn btn-lg btn-secondary fw-bold border-white bg-white un-line" th:text="#{login.confirm}">Confirm</button>
+            <button type="submit" class="btn btn-lg btn-secondary fw-bold border-white bg-white un-line" th:text="#{btn.confirm}">Confirm</button>
         </div>
     </form>
 </div>
