correct the footer and about page

--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -4,7 +4,7 @@
       layout:decorate="~{layouts/no_auth_layout}">
 <body>
 <div layout:fragment="main-content">
-    <p th:text="#{about.content}">
+    <h4 th:utext="#{about.content}"/>
 </div>
 
 </body>
