--- a/src/main/resources/templates/person/add.html
+++ b/src/main/resources/templates/person/add.html
@@ -8,23 +8,40 @@
 
 <div layout:fragment="main-content">
 
-    <form th:action="@{/persons/addUser}" th:object="${person}" method="post" class="login-form">
+    <form class="needs-validation login-form" novalidate
+          th:action="@{/persons/addUser}" th:object="${person}" method="post">
         <h1 th:text="#{person.add.label}"/>
         <br>
         <div class="form-group">
-            <label for="input-name" th:text="#{person.add.user_real_name}">real name</label>
-            <input type="text" id="input-name" th:field="*{userRealName}" name="username" class="form-control"
-                   required/>
-            <div class="invalid-feedback">Podaj imię.</div>
+            <label for="input-real_name" class="form-label" th:text="#{person.add.user_real_name}">real name</label>
+            <input th:class="'form-control ' + ${#fields.hasErrors('userRealName') ? 'is-invalid' : ''}"
+            id="input-real_name" th:field="*{userRealName}"/>
+                            <small th:if="${#fields.hasErrors('userRealName')}" th:errors="*{userRealName}"
+                                   class="text-danger"> błąd</small>
         </div>
         <div class="form-group">
-            <label th:text="#{person.add.login}">login</label>
-            <input type="text" th:field="*{login}" class="form-control"/>
+            <label for="input-login" class="form-label" th:text="#{person.add.login}">login</label>
+            <input th:class="'form-control ' + ${#fields.hasErrors('userRealName') ? 'is-invalid' : ''}"
+                   id="input-login" th:field="*{login}"/>
+            <small th:if="${#fields.hasErrors('login')}" th:errors="*{login}"
+                   class="text-danger"></small>
+<!--            <div class="invalid-feedback">Podaj login.</div>-->
         </div>
         <div class="form-group">
             <label th:text="#{person.add.password}">pass</label>
             <input type="password" th:field="*{password}" class="form-control"/>
         </div>
+        <div class="form-group">
+                <label th:text="#{person.add.re-password}">re-pass</label>
+                <input type="password"
+                       th:field="*{repeatedPassword}"
+                       placeholder="Hasło"
+                       th:class="'form-control ' + ${#fields.hasErrors('repeatedPassword') ? 'is-invalid' : ''}"/>
+                <small class="text-danger"
+                       th:if="${#fields.hasErrors('repeatedPassword')}"
+                       th:errors="*{repeatedPassword}"></small>
+        </div>
+        th:errors="*{repeatedPassword}"></small>
         <div class="form-group">
             <label th:text="#{person.add.email}"> email </label>
             <input type="email" th:field="*{email}" class="form-control"/>
@@ -33,14 +50,53 @@
             <label th:text="#{person.add.phone_number}"> phone </label>
             <input type="text" th:field="*{phoneNumber}" class="form-control"/>
         </div>
+        <div class="form-group row">
+            <p th:each="authority : ${authorities}">
+                <input type="checkbox" name="authorities"
+                       th:value="${authority.id}"
+                       th:field="*{authorities}"/>
+                <label th:text="#{${'authority.' + authority.name}}"
+                       th:for="${#ids.prev('authorities')}"></label>
+            </p>
+        </div>
         <div class="mt-3">
             <button type="submit" class="btn btn-lg btn-secondary fw-bold border-white bg-white un-line"
-                    th:text="#{btn.confirm}">Confirm
+                    th:text="#{person.add.btn.confirm}">Confirm
             </button>
         </div>
     </form>
 
+
 </div>
+
+<script>
+    // Example starter JavaScript for disabling form submissions if there are invalid fields
+    (function () {
+        "use strict";
+
+        // Fetch all the forms we want to apply custom Bootstrap validation styles to
+        let forms = document.querySelectorAll(".needs-validation");
+
+        // Loop over them and prevent submission
+        Array.prototype.slice.call(forms).forEach(function (form) {
+            form.addEventListener(
+                "submit",
+                function (event) {
+
+                    if (!form.checkValidity()) {
+                        event.preventDefault()
+                        event.stopPropagation()
+                    } else {
+                        alert("Gratulacje – ten formularz wygląda dobrze :)")
+                    }
+
+                    form.classList.add("was-validated");
+                },
+                false
+            );
+        });
+    })();
+</script>
 
 </body>
 </html>
