--- a/src/main/resources/templates/layouts/auth_layout.html
+++ b/src/main/resources/templates/layouts/auth_layout.html
@@ -59,7 +59,7 @@
                                     </a>
                                     <ul class="dropdown-menu dropdown-menu-dark dropdown-menu-end"
                                         aria-labelledby="navbarDarkDropdownMenuLink">
-                                        <li><a class="dropdown-item" href="#"
+                                        <li><a class="dropdown-item" href="user-settings.html" th:href="@{/persons/settings}"
                                                th:text="#{layout.menu.user.settings}">settings</a></li>
                                         <li>
                                             <hr class="dropdown-divider">
