save project in database - add view

--- a/src/main/resources/templates/person/add.html
+++ b/src/main/resources/templates/person/add.html
@@ -61,7 +61,7 @@
         </div>
         <div class="mt-3">
             <button type="submit" class="btn btn-lg btn-secondary fw-bold border-white bg-white un-line"
-                    th:text="#{person.add.btn.confirm}">Confirm
+                    th:text="#{btn.add}">Confirm
             </button>
         </div>
     </form>
