--- a/src/main/resources/templates/person/add.html
+++ b/src/main/resources/templates/person/add.html
@@ -9,9 +9,11 @@
 <div layout:fragment="main-content">
 
     <form class="needs-validation login-form" novalidate
-          th:action="@{/persons/addUser}" th:object="${person}" method="post">
+          th:action="@{/persons/save}" th:object="${person}" method="post">
         <h1 th:text="#{person.add.label}"/>
         <br>
+
+        <input type="hidden" th:field="*{id}"/>
         <div class="form-group">
             <label for="input-real_name" class="form-label" th:text="#{person.add.user_real_name}">real name</label>
             <input th:class="'form-control ' + ${#fields.hasErrors('userRealName') ? 'is-invalid' : ''}"
@@ -41,7 +43,7 @@
                        th:if="${#fields.hasErrors('repeatedPassword')}"
                        th:errors="*{repeatedPassword}"></small>
         </div>
-        th:errors="*{repeatedPassword}"></small>
+
         <div class="form-group">
             <label th:text="#{person.add.email}"> email </label>
             <input type="email" th:field="*{email}" class="form-control"/>
@@ -60,43 +62,17 @@
             </p>
         </div>
         <div class="mt-3">
+            <a class="btn btn-lg btn-secondary fw-bold border-white bg-white un-line"
+               th:href="@{/persons}"
+               th:text="#{btn.cancel}">Confirm
+            </a>
             <button type="submit" class="btn btn-lg btn-secondary fw-bold border-white bg-white un-line"
-                    th:text="#{btn.add}">Confirm
+                    th:text="#{btn.confirm}">Confirm
             </button>
         </div>
     </form>
 
 
 </div>
-
-<script>
-    // Example starter JavaScript for disabling form submissions if there are invalid fields
-    (function () {
-        "use strict";
-
-        // Fetch all the forms we want to apply custom Bootstrap validation styles to
-        let forms = document.querySelectorAll(".needs-validation");
-
-        // Loop over them and prevent submission
-        Array.prototype.slice.call(forms).forEach(function (form) {
-            form.addEventListener(
-                "submit",
-                function (event) {
-
-                    if (!form.checkValidity()) {
-                        event.preventDefault()
-                        event.stopPropagation()
-                    } else {
-                        alert("Gratulacje – ten formularz wygląda dobrze :)")
-                    }
-
-                    form.classList.add("was-validated");
-                },
-                false
-            );
-        });
-    })();
-</script>
-
 </body>
 </html>
