--- a/src/main/resources/templates/person/add.html
+++ b/src/main/resources/templates/person/add.html
@@ -1,78 +1,136 @@
 <!DOCTYPE html>
-<html lang="pl"
-      xmlns:th="http://www.thymeleaf.org"
-      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="~{layouts/auth_layout}">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+    <title>Formularz użytkownika</title>
+
+<!--    <link rel="shortcut icon" href="/images/favicon.ico">-->
+
+<!--    <link rel="stylesheet" href="/css/main.css" type="text/css"/>-->
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
+            crossorigin="anonymous"></script>
+</head>
 <body>
+<div class="container">
+    <h1>
+        Zapisz użytkownika
+    </h1>
 
-<div layout:fragment="main-content">
-
-    <form class="needs-validation login-form" novalidate
-          th:action="@{/persons/save}" th:object="${person}" method="post">
-        <h1 th:text="#{person.add.label}"/>
-        <br>
+    <form th:action="@{/persons/save}" th:object="${person}" method="post">
 
         <input type="hidden" th:field="*{id}"/>
-        <div class="form-group">
-            <label for="input-real_name" class="form-label" th:text="#{person.add.user_real_name}">real name</label>
-            <input th:class="'form-control ' + ${#fields.hasErrors('userRealName') ? 'is-invalid' : ''}"
-            id="input-real_name" th:field="*{userRealName}"/>
-                            <small th:if="${#fields.hasErrors('userRealName')}" th:errors="*{userRealName}"
-                                   class="text-danger"> błąd</small>
-        </div>
-        <div class="form-group">
-            <label for="input-login" class="form-label" th:text="#{person.add.login}">login</label>
-            <input th:class="'form-control ' + ${#fields.hasErrors('userRealName') ? 'is-invalid' : ''}"
-                   id="input-login" th:field="*{login}"/>
-            <small th:if="${#fields.hasErrors('login')}" th:errors="*{login}"
-                   class="text-danger"></small>
-<!--            <div class="invalid-feedback">Podaj login.</div>-->
-        </div>
-        <div class="form-group">
-            <label th:text="#{person.add.password}">pass</label>
-            <input type="password" th:field="*{password}" class="form-control"/>
-        </div>
-        <div class="form-group">
-                <label th:text="#{person.add.re-password}">re-pass</label>
-                <input type="password"
-                       th:field="*{repeatedPassword}"
-                       placeholder="Hasło"
-                       th:class="'form-control ' + ${#fields.hasErrors('repeatedPassword') ? 'is-invalid' : ''}"/>
-                <small class="text-danger"
-                       th:if="${#fields.hasErrors('repeatedPassword')}"
-                       th:errors="*{repeatedPassword}"></small>
+
+        <div class="row">
+            <div class="mb-3">
+                <div>
+                    <label for="username">
+                        Nazwa użytkownika
+                    </label>
+
+                    <div>
+                        <input type="text"
+                               id="username"
+                               th:field="*{login}"
+                               placeholder="Nazwa użytkownika"
+                               th:class="'form-control ' + ${#fields.hasErrors('login') ? 'is-invalid' : ''}">
+
+                        <small class="text-danger"
+                               th:if="${#fields.hasErrors('login')}"
+                               th:errors="*{login}"></small>
+                    </div>
+                </div>
+            </div>
+            <div class="mb-3">
+                <div>
+                    <label for="password">
+                        Hasło
+                    </label>
+
+                    <div>
+                        <input type="password"
+                               id="password"
+                               th:field="*{password}"
+                               placeholder="Hasło"
+                               th:class="'form-control ' + ${#fields.hasErrors('password') ? 'is-invalid' : ''}">
+
+                        <small class="text-danger"
+                               th:if="${#fields.hasErrors('password')}"
+                               th:errors="*{password}"></small>
+                    </div>
+                </div>
+            </div>
+            <div class="mb-3">
+                <div>
+                    <label for="repeated-password">
+                        Powtórz hasło
+                    </label>
+
+                    <div>
+                        <input type="password"
+                               id="repeated-password"
+                               th:field="*{repeatedPassword}"
+                               placeholder="Hasło"
+                               th:class="'form-control ' + ${#fields.hasErrors('repeatedPassword') ? 'is-invalid' : ''}">
+
+                        <small class="text-danger"
+                               th:if="${#fields.hasErrors('repeatedPassword')}"
+                               th:errors="*{repeatedPassword}"></small>
+                    </div>
+                </div>
+            </div>
+            <div class="mb-3">
+                <div>
+                    <label for="name">
+                        Imię i nazwisko
+                    </label>
+
+                    <div>
+                        <input type="text"
+                               id="name"
+                               th:field="*{userRealName}"
+                               placeholder="Imię i nazwisko"
+                               th:class="'form-control ' + ${#fields.hasErrors('userRealName') ? 'is-invalid' : ''}">
+
+                        <small class="text-danger"
+                               th:if="${#fields.hasErrors('userRealName')}"
+                               th:errors="*{userRealName}"></small>
+                    </div>
+                </div>
+            </div>
+
+            <div>
+                <h2>
+                    Uprawnienia
+                </h2>
+
+                <p th:each="auth : ${authorities}">
+                    <input type="checkbox"
+                           name="authorities"
+                           th:value="${auth.id}"
+                           th:field="*{authorities}">
+
+                    <label th:text="#{${'authority.' + auth.name}}"
+                           th:for="${#ids.prev('authorities')}"></label>
+                </p>
+            </div>
         </div>
 
-        <div class="form-group">
-            <label th:text="#{person.add.email}"> email </label>
-            <input type="email" th:field="*{email}" class="form-control"/>
-        </div>
-        <div class="form-group">
-            <label th:text="#{person.add.phone_number}"> phone </label>
-            <input type="text" th:field="*{phoneNumber}" class="form-control"/>
-        </div>
-        <div class="form-group row">
-            <p th:each="authority : ${authorities}">
-                <input type="checkbox" name="authorities"
-                       th:value="${authority.id}"
-                       th:field="*{authorities}"/>
-                <label th:text="#{${'authority.' + authority.name}}"
-                       th:for="${#ids.prev('authorities')}"></label>
-            </p>
-        </div>
-        <div class="mt-3">
-            <a class="btn btn-lg btn-secondary fw-bold border-white bg-white un-line"
-               th:href="@{/persons}"
-               th:text="#{btn.cancel}">Confirm
+        <div>
+            <button type="submit" class="btn btn-primary" th:text="Zapisz"></button>
+
+            <a th:href="@{'/people/edit/' + ${person.id}}"
+               th:if="${person.id}"
+               class="btn btn-default">
+                Usuń
             </a>
-            <button type="submit" class="btn btn-lg btn-secondary fw-bold border-white bg-white un-line"
-                    th:text="#{btn.confirm}">Confirm
-            </button>
         </div>
     </form>
-
-
 </div>
 </body>
 </html>
