--- a/src/main/resources/templates/issue/add.html
+++ b/src/main/resources/templates/issue/add.html
@@ -9,9 +9,10 @@
 <div layout:fragment="main-content">
 
   <form class="needs-validation login-form" novalidate
-        th:action="@{/issues/addIssue}" th:object="${issue}" method="post">
+        th:action="@{/issues/save}" th:object="${issue}" method="post">
     <h1 th:text="#{issue.add.label}"/>
     <br>
+    <input type="hidden" th:field="*{id}"/>
     <div class="form-group">
       <label th:text="#{issue.add.project}"> name </label>
       <select th:field="*{project}" class="form-select" aria-label="Default select example">
@@ -68,8 +69,12 @@
       </p>
     </div>
     <div class="mt-3">
+      <a class="btn btn-lg btn-secondary fw-bold border-white bg-white un-line"
+         th:href="@{/issues}"
+         th:text="#{btn.cancel}">Confirm
+      </a>
       <button type="submit" class="btn btn-lg btn-secondary fw-bold border-white bg-white un-line"
-              th:text="#{btn.add}">Confirm
+              th:text="#{btn.confirm}">Confirm
       </button>
     </div>
   </form>
