--- a/src/main/resources/templates/person/add.html
+++ b/src/main/resources/templates/person/add.html
@@ -49,7 +49,7 @@
 
         <div class="form-group">
             <label for="input-email" class="form-label" th:text="#{person.add.email}"> email </label>
-            <input type="email" id="input-email" class="form-control"
+            <input type="text" id="input-email" class="form-control"
                    th:field="*{email}" th:placeholder="#{person.add.placeholder}"/>
             <small th:if="${#fields.hasErrors('email')}" th:errors="*{email}"
                    class="text-danger"></small>
