filtering the issue table

--- a/src/main/resources/templates/issue/issues.html
+++ b/src/main/resources/templates/issue/issues.html
@@ -8,6 +8,8 @@
 
 <div layout:fragment="main-content">
 
+
+
     <a href="about" th:href="@{/issues/add}" class="btn btn-lg btn-secondary fw-bold
          border-white bg-white un-line justify-content-center float-md-end"
        data-bs-toggle="tooltip" data-bs-placement="left" title="Tooltip on top">
@@ -19,16 +21,75 @@
         </svg>
     </a>
 
+    <section class="container">
+        <form th:action="@{/issues}" th:object="${filter}"
+              class="form-inline">
+
+            <row>
+                <input th:field="*{name}"
+                       class="form-control"
+                       th:placeholder="#{issue.name}"/>
+
+                <button class="btn btn-primary" type="submit">Szukaj</button>
+            </row>
+
+            <row>
+                <input th:field="*{code}"
+                       class="form-control"
+                       th:placeholder="#{issue.code}"/>
+
+                <button class="btn btn-primary" type="submit">Szukaj</button>
+            </row>
+
+            <select th:field="*{project}"
+                    class="form-control"
+                    onchange="this.form.submit()">
+                <option th:value="${null}" th:text="#{issue.project}">
+                </option>
+                <option th:each="project : ${projects}"
+                        th:value="${project.id}"
+                        th:text="${project.name}"></option>
+            </select>
+
+            <select th:field="*{status}"
+                    class="form-control"
+                    onchange="this.form.submit()">
+                <option th:value="${null}" th:text="#{issue.status}"></option>
+                <option th:each="state : ${statuses}"
+                        th:value="${state.id}"
+                        th:text="${state.name}"></option>
+            </select>
+
+            <select th:field="*{priority}"
+                    class="form-control"
+                    onchange="this.form.submit()">
+                <option th:value="${null}" th:text="#{issue.priority}"></option>
+                <option th:each="priority : ${priorities}"
+                        th:value="${priority.id}"
+                        th:text="${priority.name}"></option>
+            </select>
+
+            <select th:field="*{type}"
+                    class="form-control"
+                    onchange="this.form.submit()">
+                <option th:value="${null}" th:text="#{issue.type}"></option>
+                <option th:each="type : ${types}"
+                        th:value="${type.id}"
+                        th:text="${type.name}"></option>
+            </select>
+
+        </form>
+
     <table class="table table-dark table-hover table-striped">
         <thead>
         <tr>
             <th>#</th>
             <th th:text="#{issue.name}">name</th>
-            <th th:text="#{issue.description}">description</th>
             <th th:text="#{issue.code}">code</th>
             <th th:text="#{issue.project}">project</th>
-            <th th:text="#{issue.creator}">creator</th>
-            <th th:text="#{issue.assignee}">assignee</th>
+            <th th:text="#{issue.status}">status</th>
+            <th th:text="#{issue.priority}">priority</th>
+            <th th:text="#{issue.type}">type</th>
             <th th:text="#{issue.dateCreated}">date</th>
         </tr>
         </thead>
@@ -36,14 +97,23 @@
         <tr th:each="issue : ${issues}">
             <td th:text="${issueStat.count}">count</td>
             <td th:text="${{issue.name}}">name</td>
-            <td th:text="${{issue.description}}">desc</td>
             <td th:text="${{issue.code}}">code</td>
-            <td th:if="${issue.project != null}"
-                th:text="${{issue.project.name}}">project</td>
-            <td th:if="${issue.creator != null}"
-                th:text="${{issue.creator.userRealName}}">creator</td>
-            <td th:if="${issue.assignee != null}"
-                th:text="${{issue.assignee.userRealName}}">assignee</td>
+            <td>
+                <span th:if="${issue.project != null}"
+                      th:text="${{issue.project.name}}">project</span>
+            </td>
+            <td>
+                <span th:if="${issue.status != null}"
+                      th:text="${{issue.status.name}}">status</span>
+            </td>
+            <td>
+                <span th:if="${issue.priority != null}"
+                      th:text="${{issue.priority.name}}">priority</span>
+            </td>
+            <td>
+                <span th:if="${issue.type != null}"
+                      th:text="${{issue.type.name}}">type</span>
+            </td>
             <td th:text="${{issue.dateCreated}}">date</td>
             <td>
                 <a href="about" th:href="@{/issues/remove(id=${issue.id})}" class="btn-lg btn-secondary fw-bold
@@ -54,6 +124,7 @@
         </tr>
         </tbody>
     </table>
+    </section>
 </div>
 </body>
 </html>
