--- a/src/main/resources/templates/issue/add.html
+++ b/src/main/resources/templates/issue/add.html
@@ -51,23 +51,42 @@
       </ul>
     </div>
     <div class="form-group row">
-      <p th:each="status : ${statuses}">
-        <input type="checkbox" name="priorities"
-               th:value="${status.id}"
-               th:field="*{statuses}"/>
-        <label th:text="#{${'status.' + status.name}}"
-               th:for="${#ids.prev('statuses')}"></label>
-      </p>
+      <ul>
+        <li th:each="status : ${statuses}">
+          <input type="radio" th:field="*{status}" th:value="${status.id}" />
+          <label th:for="${#ids.prev('status')}"
+                 th:text="#{${'status.' + status.name}}">status</label>
+        </li>
+      </ul>
     </div>
     <div class="form-group row">
-      <p th:each="type : ${types}">
-        <input type="checkbox" name="priorities"
-               th:value="${type.id}"
-               th:field="*{types}"/>
-        <label th:text="#{${'type.' + type.name}}"
-               th:for="${#ids.prev('types')}"></label>
-      </p>
+      <ul>
+        <li th:each="type : ${types}">
+          <input type="radio" th:field="*{type}" th:value="${type.id}" />
+          <label th:for="${#ids.prev('type')}"
+                 th:text="#{${'type.' + type.name}}">type</label>
+        </li>
+      </ul>
     </div>
+
+<!--    <div class="form-group row">-->
+<!--      <p th:each="status : ${statuses}">-->
+<!--        <input type="checkbox" name="priorities"-->
+<!--               th:value="${status.id}"-->
+<!--               th:field="*{status}"/>-->
+<!--        <label th:text="#{${'status.' + status.name}}"-->
+<!--               th:for="${#ids.prev('statuses')}"></label>-->
+<!--      </p>-->
+<!--    </div>-->
+<!--    <div class="form-group row">-->
+<!--      <p th:each="type : ${types}">-->
+<!--        <input type="checkbox" name="priorities"-->
+<!--               th:value="${type.id}"-->
+<!--               th:field="*{type}"/>-->
+<!--        <label th:text="#{${'type.' + type.name}}"-->
+<!--               th:for="${#ids.prev('types')}"></label>-->
+<!--      </p>-->
+<!--    </div>-->
     <div class="mt-3">
       <a class="btn btn-lg btn-secondary fw-bold border-white bg-white un-line"
          th:href="@{/issues}"
