--- a/src/main/resources/templates/issue/add.html
+++ b/src/main/resources/templates/issue/add.html
@@ -8,38 +8,51 @@
 
 <div layout:fragment="main-content">
 
-  <form class="needs-validation login-form" novalidate
-        th:action="@{/issues/save}" th:object="${issue}" method="post">
+  <form class="login-form" th:action="@{/issues/save}"
+        th:object="${issue}" method="post">
     <h1 th:text="#{issue.add.label}"/>
     <br>
     <input type="hidden" th:field="*{id}"/>
     <div class="form-group">
-      <label th:text="#{issue.add.project}"> name </label>
-      <select th:field="*{project}" class="form-select" aria-label="Default select example">
+      <select th:class="'form-control ' + ${#fields.hasErrors('project') ? 'is-invalid' : ''}"
+              th:field="*{project}" class="form-select" aria-label="Default select example">
+        <option th:value="${null}" th:text="#{issue.add.project}"></option>
         <option th:each="project : ${projects}"
                 th:value="${project.id}"
                 th:text="${project.name}"></option>
       </select>
+        <small th:if="${#fields.hasErrors('project')}" th:errors="*{project}"
+               class="text-danger"></small>
     </div>
     <div class="form-group">
-      <label th:text="#{issue.add.assigne}">assignee</label>
-      <select th:field="*{assignee}" class="form-select" aria-label="Default select example">
+      <select th:class="'form-control ' + ${#fields.hasErrors('assignee') ? 'is-invalid' : ''}"
+              th:field="*{assignee}" class="form-select" aria-label="Default select example">
+        <option th:value="${null}" th:text="#{issue.add.assigne}"></option>
         <option th:each="assignee : ${assignees}"
                 th:value="${assignee.id}"
                 th:text="${assignee.userRealName}">assigne</option>
       </select>
+        <small th:if="${#fields.hasErrors('assignee')}" th:errors="*{assignee}"
+               class="text-danger"></small>
     </div>
     <div class="form-group">
       <label th:text="#{issue.add.name}"> name </label>
-      <input type="text" th:field="*{name}" class="form-control"/>
+      <input th:class="'form-control ' + ${#fields.hasErrors('name') ? 'is-invalid' : ''}"
+             th:field="*{name}"/>
+      <small th:if="${#fields.hasErrors('name')}" th:errors="*{name}"
+             class="text-danger"></small>
     </div>
     <div class="form-group">
-      <label th:text="#{issue.add.description}"> name </label>
-      <input type="text" th:field="*{description}" class="form-control"/>
+      <label th:text="#{issue.add.description}"></label>
+      <input type="text" class="form-control"
+             th:field="*{description}" th:placeholder="#{person.add.placeholder}"/>
     </div>
     <div class="form-group">
       <label th:text="#{issue.add.code}"> name </label>
-      <input type="text" th:field="*{code}" class="form-control"/>
+      <input th:class="'form-control ' + ${#fields.hasErrors('code') ? 'is-invalid' : ''}"
+             th:field="*{code}"/>
+      <small th:if="${#fields.hasErrors('code')}" th:errors="*{code}"
+             class="text-danger"></small>
     </div>
     <div class="form-group row">
       <ul>
@@ -69,24 +82,6 @@
       </ul>
     </div>
 
-<!--    <div class="form-group row">-->
-<!--      <p th:each="status : ${statuses}">-->
-<!--        <input type="checkbox" name="priorities"-->
-<!--               th:value="${status.id}"-->
-<!--               th:field="*{status}"/>-->
-<!--        <label th:text="#{${'status.' + status.name}}"-->
-<!--               th:for="${#ids.prev('statuses')}"></label>-->
-<!--      </p>-->
-<!--    </div>-->
-<!--    <div class="form-group row">-->
-<!--      <p th:each="type : ${types}">-->
-<!--        <input type="checkbox" name="priorities"-->
-<!--               th:value="${type.id}"-->
-<!--               th:field="*{type}"/>-->
-<!--        <label th:text="#{${'type.' + type.name}}"-->
-<!--               th:for="${#ids.prev('types')}"></label>-->
-<!--      </p>-->
-<!--    </div>-->
     <div class="mt-3">
       <a class="btn btn-lg btn-secondary fw-bold border-white bg-white un-line"
          th:href="@{/issues}"
