--- a/src/main/resources/templates/project/add.html
+++ b/src/main/resources/templates/project/add.html
@@ -9,25 +9,31 @@
 <div layout:fragment="main-content">
 
     <form class="needs-validation login-form" novalidate
-          th:action="@{/projects/addProject}" th:object="${project}" method="post">
+          th:action="@{/projects/save}" th:object="${project}" method="post">
         <h1 th:text="#{project.add.label}"/>
         <br>
 
         <div class="form-group">
-            <label th:text="#{project.add.name}"></label>
-            <input type="email" th:field="*{name}" class="form-control"/>
+            <label for="input-name" class="form-label" th:text="#{project.add.name}">name</label>
+            <input th:class="'form-control ' + ${#fields.hasErrors('name') ? 'is-invalid' : ''}"
+                   id="input-name" th:field="*{name}"/>
+            <small th:if="${#fields.hasErrors('name')}" th:errors="*{name}"
+                   class="text-danger"></small>
         </div>
         <div class="form-group">
-            <label th:text="#{project.add.code}"></label>
-            <input type="email" th:field="*{code}" class="form-control"/>
+            <label for="input-code" class="form-label" th:text="#{project.add.code}">code</label>
+            <input th:class="'form-control ' + ${#fields.hasErrors('code') ? 'is-invalid' : ''}"
+                   id="input-code" th:field="*{code}"/>
+            <small th:if="${#fields.hasErrors('code')}" th:errors="*{code}"
+                   class="text-danger"></small>
         </div>
         <div class="form-group">
             <label th:text="#{project.add.description}"></label>
-            <input type="text" th:field="*{description}" class="form-control"/>
+            <input type="text" class="form-control" th:field="*{description}" th:placeholder="#{person.add.placeholder}"/>
         </div>
         <div class="mt-3">
             <button type="submit" class="btn btn-lg btn-secondary fw-bold border-white bg-white un-line"
-                    th:text="#{btn.add}">Confirm
+                    th:text="#{btn.confirm}">Confirm
             </button>
         </div>
     </form>
